examples/good/in/02-03-literals.see
void main() {
    string s = "Hello ";              printStr(s); // s = "Hello"
    string z = "Mum", x = "Not used"; printStr(z); // z = "Mum"
    x = s + z; printStr(x); // x = "Hello Mum"

    return;
}