examples/bad/in/02-02-literals.see
void main() {
    printStr('Not a string');

    return;
}
